TODO:
    add translations
    add credits (mp3 files)
    update manual
    test when cookies are disabled

    improve joinwav()
    get rid of cryptographp.cfg.php (use config.php directly)
    separate $_SESSION info for different CAPTCHAs

Version 1beta2 - released TODO
cmb	fixed buggy requirement check
cmb	extended copyright to 2012
cmb	changed usage of original cryptographp: instead of using it as library it's now fully integrated
cmb	fixed cryptographps local file inclusion bug
cmb	implemented audio captcha
cmb	removed config options char_case_sensitive and crypt_secure
cmb	moved cryptographp config to config/
cmb	added alt attributes for captcha and buttons
cmb	added plugin icon
cmb	allowed multiple idependent instances (removed crypt_use_max and crypt_one_use)

Version 1beta1 - released 2011-09-19
cmb	initial release