@@ -31,13 +31,13 @@ function cryptographp_captcha_display() {
     $ptx = $plugin_tx['cryptographp'];
     $o = '<div class="cryptographp">'."\n";
     $alt = htmlspecialchars($ptx['alt_image'], ENT_QUOTES);
-    $o .= tag('img id="cryptogram" src="'.$dir.'cryptographp.php?id='.$_SESSION['cryptographp_id'].'" alt="'.$alt.'"')."\n";
+    $o .= tag('img id="cryptogram" src="'.$dir.'cryptographp.php?id='.$_SESSION['cryptographp_id'].'&amp;lang='.$sl.'" alt="'.$alt.'"')."\n"; // TODO: id!
     $alt = htmlspecialchars($ptx['alt_audio'], ENT_QUOTES);
     $o .= '<a href="'.$dir.'audio.php?id='.$_SESSION['cryptographp_id'].'">'
 	    .tag('img src="'.$dir.'images/audio.png" alt="'.$alt.'" title="'.$alt.'"').'</a>'."\n";
     $alt = htmlspecialchars($ptx['alt_reload'], ENT_QUOTES);
     $o .= '<a href="javascript:void(0)" onclick="document.getElementById(\'cryptogram\').src = \''
-		.$dir.'cryptographp.php?id='.$_SESSION['cryptographp_id'].'&\' + new Date().getTime()">'
+		.$dir.'cryptographp.php?id='.$_SESSION['cryptographp_id'].'&lang='.$sl.'&\' + new Date().getTime()">'
 	    .tag('img src="'.$dir.'images/reload.png" alt="'.$alt.'" title="'.$alt.'"').'</a>'."\n"
 	    .'<div>'.$ptx['message_enter_code'].'</div>'."\n"
 	    .tag('input type="text" name="cryptographp-captcha"')
